OxyMP/oxymp/tests/trybuild/independent/unknown-marker.rs
#[oxymp::oxymp]
mod l {
    #[oxymp::Unknown]
    enum Tok {
        #[exact("a")]
        A,
    }
}

fn main() {}
